@@ -1,3 +1,8 @@
+2007-03-07  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: emacs/kahua.el.in
+	  Add font lock face customization and indentation.
+
 2007-02-21  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Fix: src/kahua/persistence/dbi.scm
